# fastAPIdoZero

./: README.md
fast_zero/: .coverage  .env  database.db  models.py  pyproject.toml  requirements.txt  testes_db.py
fast_zero/fast_zero/: app.py  schemas.py
fast_zero/migrations/: env.py
fast_zero/migrations/versions/: cdacf3eb7e81_create_users_table.py
fast_zero/tests/: conftest.py  test_app.py  test_db.py
